--- a/asia/asia.html
+++ b/asia/asia.html
@@ -2,28 +2,157 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Africa Information">
+    <meta name="description" content="Asia Information">
     <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">>
+    <meta name="author" content="Austin Medina, Lauren Goodrich, Enka Hysaj, Maddie Carlson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asia</title>
     <style>
-        
+        .map-container {
+            position: relative;
+            display: block;
+            text-align: center; /* This will center the image horizontally */
+            margin-top: 20px; /* Optional: Adds some space between the paragraph and the map */
+        }
+
+        .map-image {
+            max-width: 700px;  /* Adjust size as needed */
+            width: 100%;       /* Ensures the image is responsive up to the max-width */
+            max-height: 600px;
+            height: 100%;      /* Maintains aspect ratio */
+            margin: 0 auto;    /* Centers the image horizontally */
+            display: block;    /* Ensures it behaves like a block element for centering */
+        }
+
+        .region-button {
+            position: absolute;
+            background-color: rgba(255, 255, 255, 0.8);
+            border: 1px solid #ccc;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 5px;
+            transform: translate(-50%, -50%);
+        }
+
+        .region-button:hover {
+            background-color: rgba(255, 165, 0, 0.8);
+        }
+
+        .details {
+            display: none; /* Initially hidden */
+            position: fixed; /* Fix to viewport, not the document flow */
+            top: 50%; /* Move to the middle of the viewport */
+            left: 50%; /* Move to the middle of the viewport */
+            transform: translate(-50%, -50%); /* Adjust for the element's size */
+            z-index: 1000; /* Ensure it's above other elements */
+            border: 1px solid #ccc;
+            padding: 15px;
+            background-color: #f9f9f9;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add a shadow for better visibility */
+            max-width: 90%; /* Make it responsive */
+            width: 400px; /* Set a default width */
+            border-radius: 8px; /* Optional: Rounded corners */
+        }
+
+        .details img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .close-button {
+            background: #f00;
+            color: #fff;
+            padding: 5px;
+            border: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="north-america.html">North America</a>
-        <a href="south-america.html">South America</a>
-        <a href="oceania.html">Oceania</a>
-        <a href="asia.html">Asia</a>
-        <a href="africa.html">Africa</a>
-        <a href="europe.html">Europe</a>
-        <a href="antarctica.html">Antarctica</a>
+        <a href="home.html">Home</a>
+        <a href="/northAmerica/northAmerica.html">North America</a>
+        <a href="/southAmerica/southAmerica.html">South America</a>
+        <a href="/oceania/oceania.html">Oceania</a>
+        <a href="/asia/asia.html">Asia</a>
+        <a href="/africa/africa.html">Africa</a>
+        <a href="/europe/europe.html">Europe</a>
+        <a href="/antarctica/antarctica.html">Antarctica</a>
     </nav>
     <div class="content">
         <h1>Asia</h1>
+        <div class="geography">
+            <h2>Geography</h2>
+            <p>Asia, the largest continent, covers 30% of Earth’s land area and is home to 60% of the world’s population. It is characterized by a diverse landscape divided into five major physical regions: mountain systems, plateaus, plains and deserts, freshwater environments, and saltwater environments. Each region shapes the continent's unique geography, culture, and ecosystems, making Asia a key player in global history and ecological significance.</p>
+            <div class="map-container">
+                <img src="asiaGeographyImages/asiaMap2.png" alt="Antarctica Map" class="map-image">
+                <!-- Buttons -->
+                <div class="region-button" style="top: 40%; left: 30%;" onclick="showDetails('border')">
+                    Asia's Border
+                </div>
+                <div class="region-button" style="top: 68%; left: 40%;" onclick="showDetails('mountain')">
+                    Mountain Systems
+                </div>
+                <div class="region-button" style="top: 60%; left: 45%;" onclick="showDetails('plateaus')">
+                   Plateaus
+                </div>
+                <div class="region-button" style="top: 30%; left: 40%;" onclick="showDetails('plains')">
+                    Plains
+                 </div>
+                 <div class="region-button" style="top: 45%; left: 50%;" onclick="showDetails('freshwater')">
+                    Freshwater Regions
+                 </div>
+                 <div class="region-button" style="top: 85%; left: 45%;" onclick="showDetails('saltwater')">
+                    Saltwater Regions
+                 </div>
+            </div>
+            <!-- Details Sections -->
+            <div id="border" class="details">
+                <h2>Asia's Borders</h2>
+                <p>Asia occupies the eastern part of the Eurasian supercontinent, bordered by the Arctic, Pacific, and Indian Oceans. Its western border with Europe follows an irregular line marked by the Ural and Caucasus Mountains, the Caspian Sea, and the Black Sea. While oceans provide clear boundaries, the division between Asia and Europe is often debated due to overlapping geographical and political factors. Historically, the names “Asia” and “Europe” may derive from Mesopotamian words for “sunrise” and “sunset.” The concept of Eurasia as a unified supercontinent has gained importance in geopolitics, particularly in fostering connections between Russia, China, and countries like Kazakhstan.</p>
+                <img src="asiaGeographyImages/borderImage.png" alt="Asia Border Image">
+                <button class="close-button" onclick="hideDetails('border')">Close</button>
+            </div>
+            <div id="mountain" class="details">
+                <h2>Mountain Systems</h2>
+                <p>Asia hosts several prominent mountain ranges. The Himalayas, stretching 2,500 kilometers, separate the Indian subcontinent from the rest of Asia. Formed by tectonic collision, they continue to grow and include Mount Everest, the worlds tallest peak at 8,850 meters. The Tien Shan, or “Celestial Mountains,” straddles Kyrgyzstan and China, with peaks like Victory Peak (7,439 meters). The ancient Ural Mountains in Russia and Kazakhstan are much older and less elevated, averaging 914 to 1,220 meters.</p>
+                <img src="asiaGeographyImages/mountEverest.jpg" alt="Asia Mountain System Image">
+                <button class="close-button" onclick="hideDetails('mountain')">Close</button>
+            </div>
+            <div id="plateaus" class="details">
+                <h2>Plateaus</h2>
+                <p>Asias plateaus vary in size and significance. The Tibetan Plateau, the worlds largest and highest, averages 4,500 meters in elevation and feeds many major rivers, sustaining over 2 billion people. The Iranian Plateau spans Iran, Afghanistan, and Pakistan, with high deserts and volcanic peaks like Mount Damavand. The Deccan Plateau in southern India is bordered by the Eastern and Western Ghats and is home to centuries-old temples and mosques.</p>
+                <img src="asiaGeographyImages/tibetanPlateau.jpg" alt="Plateaus Image">
+                <button class="close-button" onclick="hideDetails('plateaus')">Close</button>
+            </div>
+            <div id="plains" class="details">
+                <h2>Plains, Steppes, and Deserts</h2>
+                <p>The West Siberian Plain, one of the worlds flattest areas, features vast swamps and supports reindeer herding communities. Central Asia’s steppes, including Mongolia’s arid and desert zones, transition to the Gobi Desert in the south. The Rub’ al Khali, or Empty Quarter, is the largest sand desert, spanning Saudi Arabia and neighboring countries, with archaeological evidence of prehistoric life.</p>
+                <img src="asiaGeographyImages/westSiberianPlain.png" alt="Plains Image">
+                <button class="close-button" onclick="hideDetails('plains')">Close</button>
+            </div>
+            <div id="freshwater" class="details">
+                <h2>Freshwater Regions</h2>
+                <p>Asia’s freshwater systems are crucial to its ecology and civilizations. Lake Baikal in Russia is the world’s deepest and oldest lake, holding 20% of the planet’s unfrozen fresh water. Rivers like the Yangtze in China, the longest in Asia, support vast populations and economic activity, while the Tigris and Euphrates, central to ancient Mesopotamian civilizations, face modern threats from damming and desertification.</p>
+                <img src="asiaGeographyImages/freshwaterImage.jpg" alt="Freshwater region Image">
+                <button class="close-button" onclick="hideDetails('freshwater')">Close</button>
+            </div>
+            <div id="saltwater" class="details">
+                <h2>Saltwater Regions</h2>
+                <p>Asia’s saltwater bodies influence its geography and economy. The Persian Gulf, rich in oil reserves, borders several countries and drives geopolitical tensions. The Bay of Bengal, the world’s largest bay, supports diverse ecosystems and sacred rivers like the Ganges, while the icy Sea of Okhotsk presents navigation challenges during winter.</p>
+                <img src="asiaGeographyImages/bayOfBengal.jpg" alt="Freshwater region Image">
+                <button class="close-button" onclick="hideDetails('saltwater')">Close</button>
+            </div>
+            <script>
+                function showDetails(regionId) {
+                    document.getElementById(regionId).style.display = 'block';
+                }
+            
+                function hideDetails(regionId) {
+                    document.getElementById(regionId).style.display = 'none';
+                }
+            </script>
+        </div>
     </div>
 </body>
 </html>
